# testing_pandera_schemas_in_pydantic_model

./: README.md  pyproject.toml
src/: schema.py
tests/src/: test_schema.py
